--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.18.0",
+    "babel-eslint": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
@@ -18,6 +19,10 @@
     "breakpoint-slicer": "^2.0.0",
     "chai": "^3.5.0",
     "change-case": "^3.0.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
     "event-stream": "^3.3.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -25,17 +30,17 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^2.0.0",
+    "gulp-eslint": "^3.0.1",
     "gulp-filelist": "^1.0.0",
     "gulp-if": "^2.0.1",
-    "gulp-ignore": "^2.0.1",
     "gulp-inject-string": "^1.1.0",
     "gulp-jscs": "^4.0.0",
     "gulp-json-include-and-merge": "0.0.1",
     "gulp-json-to-yaml": "0.0.2",
     "gulp-merge-json": "^0.6.0",
     "gulp-merge-json-individual": "0.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-sass-glob": "^1.0.8",
@@ -54,10 +59,11 @@
     "yamljs": "^0.2.8"
   },
   "dependencies": {
+    "gulp-order": "^1.1.1",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "modernizr": "^3.3.1",
     "npm-modernizr": "^2.8.3",
-    "ppr-js": "^1.0.6"
+    "ppr-js": "^2.0.2"
   }
 }
